--- a/packages/nano_lints/pubspec.yaml
+++ b/packages/nano_lints/pubspec.yaml
@@ -5,9 +5,12 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  flutter:
+    sdk: flutter
   analyzer: ">=6.0.0 <9.0.0"
   custom_lint_builder: ^0.8.0
 
 dev_dependencies:
+  custom_lint: ^0.8.0
   lints: ^3.0.0
   test: ^1.24.0
