Migrate project to Dart Workspaces
- Defined workspace members in root pubspec.yaml.
- Configured all examples and packages to use 'resolution: workspace'.
- Bumped minimum SDK constraint to 3.5.0 across all packages.
- Harmonized shared dependencies (flutter_lints, lints) to resolve version conflicts.
- Removed individual pubspec.lock files in favor of unified workspace resolution.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,17 @@ version: 0.7.2
 homepage:
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
   flutter: ">=1.17.0"
+
+workspace:
+  - example/breaking_bad
+  - example/crypto_tracker
+  - example/nano_hub
+  - example/pokedex
+  - example/rick_and_morty
+  - packages/nano_devtools_extension
+  - packages/nano_lints
 
 dependencies:
   flutter:
