--- a/example/crypto_tracker/pubspec.yaml
+++ b/example/crypto_tracker/pubspec.yaml
@@ -4,7 +4,9 @@ publish_to: 'none'
 version: 0.0.1
 
 environment:
-  sdk: ^3.10.0
+  sdk: ^3.5.0
+
+resolution: workspace
 
 dependencies:
   flutter:
