--- a/example/nano_hub/pubspec.yaml
+++ b/example/nano_hub/pubspec.yaml
@@ -4,7 +4,9 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.10.7
+  sdk: ^3.5.0
+
+resolution: workspace
 
 dependencies:
   flutter:
