--- a/packages/nano_lints/pubspec.yaml
+++ b/packages/nano_lints/pubspec.yaml
@@ -2,7 +2,9 @@ name: nano_lints
 description: Custom lints for the Nano state management library.
 version: 0.0.2
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"
+
+resolution: workspace
 
 dependencies:
   flutter:
@@ -12,5 +14,5 @@ dependencies:
 
 dev_dependencies:
   custom_lint: ^0.8.0
-  lints: ^3.0.0
+  lints: ^6.0.0
   test: ^1.24.0
