feat: integrate Modern Nano features into core and align workspace
Promotes the Generator PoC to a production-ready feature set:
1.  Packages: Moved nano_annotations and nano_generator to packages/.
2.  Components: Added NanoComponent, NanoStatelessWidget, and NanoConsumer for zero-boilerplate UI.
3.  Collections: Added reactive NanoList, NanoMap, and NanoSet for mutable state support.
4.  DI: Patched Scope and Registry to handle proper disposal of Logic instances.
5.  Examples: Added example/counter_evolution and a modern version of breaking_bad.
6.  Workspace: Aligned analyzer and custom_lint versions across the repository to resolve dependency conflicts.

--- a/example/breaking_bad/pubspec.yaml
+++ b/example/breaking_bad/pubspec.yaml
@@ -13,12 +13,17 @@ dependencies:
     sdk: flutter
   nano:
     path: ../../
+  nano_annotations:
+    path: ../../packages/nano_annotations
   http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  build_runner: ^2.4.6
+  nano_generator:
+    path: ../../packages/nano_generator
 
 flutter:
   uses-material-design: true
