--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 workspace:
   - example/breaking_bad
+  - example/counter_evolution
   - example/crypto_tracker
   - example/minesweeper
   - example/nano_hub
@@ -29,7 +30,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  custom_lint: ^0.8.0
+  custom_lint: ^0.6.4
   nano_lints:
     path: packages/nano_lints
 
