feat: implement advanced testing utilities and snapshot harness
Introduces a complete suite of tools for robust, state-driven testing:
1.  NanoTestHarness: Added support for automatic golden snapshot management with CI safety.
2.  NanoWidgetTester: Added pumpSettled() for deterministic async waits and read<T>() for direct logic access.
3.  NanoFinders: Added find.atom() to verify UI-to-Logic integration.
4.  Refactor: Updated Breaking Bad widget tests to use the new modern testing style.
5.  Verified: All tests pass with no analysis issues.

--- a/example/counter_evolution/pubspec.yaml
+++ b/example/counter_evolution/pubspec.yaml
@@ -22,3 +22,5 @@ dev_dependencies:
   build_runner: ^2.4.6
   nano_generator:
     path: ../../packages/nano_generator
+  nano_test_utils:
+    path: ../../packages/nano_test_utils
