--- a/example/breaking_bad/pubspec.yaml
+++ b/example/breaking_bad/pubspec.yaml
@@ -24,6 +24,8 @@ dev_dependencies:
   build_runner: ^2.4.6
   nano_generator:
     path: ../../packages/nano_generator
+  nano_test_utils:
+    path: ../../packages/nano_test_utils
 
 flutter:
   uses-material-design: true
