--- a/packages/nano_annotations/pubspec.yaml
+++ b/packages/nano_annotations/pubspec.yaml
@@ -2,4 +2,6 @@ name: nano_annotations
 description: Annotations for Nano generator PoC.
 version: 0.0.1
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
+
+resolution: workspace
