--- a/packages/nano_generator/pubspec.yaml
+++ b/packages/nano_generator/pubspec.yaml
@@ -2,14 +2,15 @@ name: nano_generator
 description: Code generator for Nano PoC.
 version: 0.0.1
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
+
+resolution: workspace
 
 dependencies:
   build: ^2.4.1
   source_gen: ^1.5.0
   analyzer: ">=6.0.0 <9.0.0"
-  nano_annotations:
-    path: ../nano_annotations
+  nano_annotations: ^0.0.1
   code_builder: ^4.5.0
   dart_style: ^2.0.3
 
