--- a/packages/nano_test_utils/pubspec.yaml
+++ b/packages/nano_test_utils/pubspec.yaml
@@ -4,11 +4,12 @@ version: 0.0.1
 environment:
   sdk: '>=3.5.0 <4.0.0'
 
+resolution: workspace
+
 dependencies:
   flutter:
     sdk: flutter
-  nano:
-    path: ../../
+  nano: ^0.7.3
   meta: ^1.17.0
   path: ^1.9.0
 
