Fix: Docs Update workflow triggers after Verify success
Changed docs-update.yml trigger from 'push' to 'workflow_run' on 'Verify' completion.
This ensures documentation update requests are only raised after the build has passed.

--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -1,12 +1,12 @@
 name: Update Docs Request
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Verify"]
+    types:
+      - completed
     branches:
       - main
-    paths:
-      - 'lib/**'
-      - 'pubspec.yaml'
 
 permissions:
   issues: write
@@ -15,6 +15,7 @@ permissions:
 jobs:
   request-docs-update:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v4
 
