--- a/.github/workflows/docs-update.yml
+++ b/.github/workflows/docs-update.yml
@@ -1,6 +1,7 @@
 name: Update Docs Request
 
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["Verify"]
     types:
@@ -15,7 +16,7 @@ permissions:
 jobs:
   request-docs-update:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v4
 
