--- a/packages/nano_generator/pubspec.yaml
+++ b/packages/nano_generator/pubspec.yaml
@@ -8,11 +8,11 @@ resolution: workspace
 
 dependencies:
   build: ^2.4.1
-  source_gen: ^1.5.0
-  analyzer: ">=6.0.0 <9.0.0"
+  source_gen: ^1.4.0
+  analyzer: ^6.3.0
   nano_annotations: ^0.0.1
   code_builder: ^4.5.0
-  dart_style: ^2.0.3
+  dart_style: ^2.3.2
 
 dev_dependencies:
   build_runner: ^2.4.6
